plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'pl.allegro.tech.build.axion-release' version '1.15.3'
}

scmVersion {
    tag {
        prefix = ''
    }
    nextVersion {
        suffix = 'SNAPSHOT'
    }
    checks {
        snapshotDependencies.set(false)
    }
}


group = 'com.shingu'
version = scmVersion.version

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
    }
}

dependencies {
    // Spring Cloud BOM for dependency management
    implementation platform('org.springframework.cloud:spring-cloud-dependencies:2023.0.0')

    // TestContainers BOM for testing
    testImplementation platform('org.testcontainers:testcontainers-bom:1.19.3')

    // Spring Core
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring AI
    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
    implementation 'org.springframework.ai:spring-ai-markdown-document-reader'
    implementation 'org.springframework.ai:spring-ai-pdf-document-reader'
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    // Configuration
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // Database
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    // 개발 편의성
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mariadb'
    testImplementation 'org.testcontainers:redis'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // Redis & Cache
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // WebFlux for OpenAI API Client (Reactive)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Caffeine Cache for L1 Memory Cache
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Micrometer for Metrics
    implementation 'io.micrometer:micrometer-core'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Resilience4j for Circuit Breaker (Optional)
    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:3.1.0'

    // Apache Commons for Utilities
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'commons-codec:commons-codec:1.16.0'

    // RestTemplate for Notification Service
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // XML Processing
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

    // HTML Parsing
    implementation 'org.jsoup:jsoup:1.17.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
